@@ -4,7 +4,8 @@ classification = feature prediction / ORFs
 [parameters]
 ;; maximum number of sequences per BSML output file
 $;NUM_SEQS$; = 1000
-
+;; gene calls smaller than this cutoff value are discarded
+$;CUTOFF$; = 180
 
 [input]
 $;INPUT_FILE_LIST$; = 
@@ -20,12 +21,15 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 $;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
 $;FASTA_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.fsa.list
 $;RAW_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.raw.list
+$;TBL_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.tbl.list
+$;GBK_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.gbk.list
 
 [component]
 $;COMPONENT_NAME$; = metagene 
 $;DESCRIPTION$; = none
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
+$;SKIP_WF_COMMAND$;=get_seq_by_metagene,create tbl list,create gbk list
 
 ;The version,revision,tag here is set by an interpolated CVS tag
 $;VERSION$; = 2.0
@@ -35,12 +39,24 @@ $;REVISION$;            = $Revision: 4680 $
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
 $;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+$;ITERATORVAL$; = dtd
+$;ITERATORVAL_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATORVAL$;.xml
 
 ;Distributed options
 $;GROUP_COUNT$; = 150
 $;NODISTRIB$; = 0
+;;
+;; These settings should only bet set if this component
+;; is being run as part of the oral metagenomics pipeline
+;;
+;; Desired SeqIO output format.
+;; Should be a valid BioPerl SeqIo output format (i.e. "genbank")
+$;OUT_FORMAT$; = null
+;; Prefix for sequence identifiers in newly genereated files
+$;GENE_PREFIX$; = null
+;;
 
-;the following keys are replaced at runtime by the invocation script
+;;the following keys are replaced at runtime by the invocation script
 $;COMPONENT_CONFIG$; = 
 $;COMPONENT_XML$; = 
 $;PIPELINE_XML$; = 
